fix z-index of .navbar-collapse

--- a/public/assets/sass/header.scss
+++ b/public/assets/sass/header.scss
@@ -9,7 +9,8 @@
     }
 
     .navbar-collapse {
-        background-color: var(--color-contrast-lower)
+        background-color: var(--color-contrast-lower);
+        z-index: 1;
     }
 
     .navbar-toggler {
